--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -104,7 +104,7 @@ section
   font-weight: normal
   font-size: 30px 
   margin-bottom: 20px
-  padding: 30px 0px
+  padding: 0 0 10px 0px
   text-transform: capitalize
 .story-prsn-name
   font-size: 25px
@@ -169,7 +169,13 @@ section
 
 #contact, #staff, #about
   .section-heading
-    border-bottom: 1px solid #f3f3f3 
+    border-bottom: 5px solid #fff
+    font-size: 28px
+    color: #FFF
+    font-family: texgyreadventor-bold
+    width: 440px
+    padding-top: 50px
+
   .form-control
     border-radius: 0
   .addressblock
@@ -186,6 +192,9 @@ section
 
 #staff 
   section
+  .pagetitle
+    h3
+      background: asset_url('')
     position: relative
   .col-md-6
     height: 100%
@@ -198,6 +207,7 @@ section
   
   h2
     padding-bottom: 10px
+    font-size: 24px
   
   p
     padding-top: 20px
